# himalia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
adapter/: Cargo.toml
adapter/src/: lib.rs  prelude.rs
adapter/src/repository/: mod.rs  sqlx_errors_wrapper.rs
adapter/src/repository/postgres_sqxl/: mod.rs  user_repository_postgres_sqxl.rs
adapter/src/repository/sqlite_sqlx/: mod.rs  user_repository_sqlite_sqlx.rs
adapter/src/repository/sqlx/: mod.rs  sqlx_errors_wrapper.rs
adapter/src/repository/sqlx/model/: user_model.rs
adapter/src/repository/sqlx/sqlite/: user_repository_sqlite_sqlx.rs
adapter/src/repository/sqlx/sqlite/user/: mod.rs  user_sqlite_sqlx_repository_adapter.rs
app/: Cargo.toml
app/src/: cmd_flags.rs  main.rs
entity/: Cargo.toml
entity/src/: prelude.rs
entity/src/user/: user_entity.rs
migrations/sqlite/: 20251004020400_init.up.sql
port/: Cargo.toml
port/src/: lib.rs  prelude.rs
port/src/exec/: exec_port.rs  mod.rs
port/src/tx/: mod.rs  tx_port.rs
port/src/user/: mod.rs  user_error_port.rs  user_repository_port.rs  user_service_port.rs
service/: Cargo.toml
service/src/: lib.rs  prelude.rs
service/src/user/: user_service.rs
