[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
adapter.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
entity.workspace = true
port.workspace = true
service.workspace = true
sqlx = { version = "0.8.6", features = [
    "migrate",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1.47.1", features = ["full"] }
